@@ -7,6 +7,7 @@ public class C_Generate implements Command{
 
   public void execute(){
     FRCG.instance.composition=new Composition();
+    FRCG.instance.ui.panView.centerAndFit();
     CQ.renderForViewer();}
 
   public String getDescription(){
