@@ -6,3 +6,8 @@ Made Log stuff nicer.
 
 2012_03_17
 did config file. cleaned up exception handling
+
+2012_03_20
+improved ui. improved rendering.
+did mouse controlled scale and pan on viewer
+
